--- a/PySimpleGUI-practice.ipynb
+++ b/PySimpleGUI-practice.ipynb
@@ -46,8 +46,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ac8725d7-3980-4657-8b69-c65f8558020b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import PySimpleGUI as sg\n",
+    "import random\n",
+    "import time\n",
+    "\n",
+    "secret_number = random.randint(1, 100)\n",
+    "attempts = 0\n",
+    "\n",
+    "layout = [\n",
+    "    [sg.Text(\"1から100までの数を当ててください\")],\n",
+    "    [sg.Input(key=\"guess\")],\n",
+    "    [sg.Button(\"判定\", key=\"check\"), sg.Button(\"終了\", key=\"exit\")],\n",
+    "    [sg.Text(\"\", key=\"output\")]\n",
+    "]\n",
+    "\n",
+    "window = sg.Window(\"数当てゲーム\", layout)\n",
+    "\n",
+    "while True:\n",
+    "    event, values = window.read()\n",
+    "\n",
+    "    if event == sg.WINDOW_CLOSED or event == \"exit\":\n",
+    "        break\n",
+    "\n",
+    "    if event == \"check\":\n",
+    "        guess = values[\"guess\"]\n",
+    "\n",
+    "        if guess.isdigit():\n",
+    "            guess = int(guess)\n",
+    "            attempts += 1\n",
+    "\n",
+    "            if guess < secret_number:\n",
+    "                window[\"output\"].update(f\"{guess}は小さいです。もう一度\")\n",
+    "            elif guess > secret_number:\n",
+    "                window[\"output\"].update(f\"{guess}は大きいです。もう一度\")\n",
+    "            else:\n",
+    "                window[\"output\"].update(f\"正解です!{attempts}回で当てました\")\n",
+    "                time.sleep(3)\n",
+    "                break\n",
+    "        else:\n",
+    "            window[\"output\"].update(\"数字を入力してください\")\n",
+    "\n",
+    "window.close()\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd465cb7-f6a2-4da6-bdde-001390b72f56",
    "metadata": {},
    "outputs": [],
    "source": []
